UI: Fix Alignment of Copyright Section

--- a/client/opensource_programs/style.css
+++ b/client/opensource_programs/style.css
@@ -149,6 +149,12 @@ footer {
     padding: 1rem 1.3rem;
 }
 
+footer .end {
+    padding: 0 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 footer .copyright {
     color: white;
     text-align: center;
@@ -216,7 +222,6 @@ footer .creator {
         font-size: 17px;
         border-bottom: none;
     }
-
 }
 
 @media (min-width: 1280px) {
@@ -321,11 +326,8 @@ footer {
       text-align: left;
     }
   }
-  
-  footer .end {
-    padding: 0 2rem;
-    display: flex;
-    justify-content: space-between;
+}
+
   }
   
   .to-top {
